--- a/sass/base/_typography.scss
+++ b/sass/base/_typography.scss
@@ -63,5 +63,75 @@ body {
   letter-spacing: 0em;
   text-align: center;
   margin: 2.4rem 0;
+  color: $text-color-1;
 
+  @include respond(big-desktop) {
+    font-size: 2.8rem;
+  }
+
+  @include respond(big-phone) {
+    font-size: 2rem;
+  }
+
+  @include respond(phone) {
+    font-size: 1.6rem;
+    line-height: 1500%;
+
+
+  }
+
+  @include respond(big-phone) {
+    font-size: 1.4em;
+  }
+
+}
+
+.intro-span span {
+  font-size: 1.6rem;
+  font-weight: 400;
+  line-height: 1.3;
+  padding-right: 1rem;
+
+
+  @include respond(big-desktop) {
+    font-size: 2rem;
+    line-height: 1.2;
+    padding-right: .8rem;
+  }
+
+  @include respond(phone) {
+    font-size: 1.4rem;
+    line-height: 1.2;
+    padding-right: .8rem;
+  }
+
+  @include respond(sm-phone) {
+    font-size: 1.8rem;
+    line-height: 1.2;
+    padding-right: .8rem;
+  }
+
+}
+
+.paragraph {
+  font-size: 2rem;
+  font-weight: 500;
+  line-height: 130%;
+  text-transform: capitalize;
+
+  @include respond (big-desktop) {
+    font-size: 2.4rem;
+  }
+
+  @include respond (big-phone) {
+    font-size: 1.8rem;
+  }
+
+  @include respond (big-phone) {
+    font-size: 1.8rem;
+  }
+
+  @include respond (phone) {
+    font-size: 1.6rem;
+  }
 }
