--- a/sass/main.scss
+++ b/sass/main.scss
@@ -5,5 +5,7 @@
 @import './base/utilities';
 @import"./components/btn";
 @import "./layout/footer";
+@import "./layout/grid";
 @import "./layout/header";
 @import "./layout/navigation";
+@import "./pages/section-1"
