--- a/sass/abstract/_variables.scss
+++ b/sass/abstract/_variables.scss
@@ -2,5 +2,8 @@ $background-color: #060606;
 $primary-color :#fff;
 $grey-1: #989898;
 $grey-2: #474545;
-$text-color-1: #BDBDBD;
+$text-color-1 : #BDBDBD;
 ;
+$grey-dark-1: #131313;
+$trans-white: rgba(255, 255, 255, 0.4);
+$gradient: linear-gradient(to bottom, rgba(255, 255, 255, 0), rgba(255, 255, 255, 0.242));
