--- a/sass/layout/_header.scss
+++ b/sass/layout/_header.scss
@@ -102,33 +102,26 @@
   }
 
   .featured {
-    // background-color: blue;
-    margin: 0 29rem 19.2rem;
+    margin: 0 29rem 0;
     display: block;
 
     p {
-      // display: flex;justify-content: center;align-items: center;
       text-align: center;
       margin-bottom: 4.8rem;
       color: $text-color-1;
     }
 
     .logos {
-      // background-color: red;
       display: flex;
       justify-content: space-between;
       align-items: end;
 
-      height: 6rem;
+      // height: 6rem;
       gap: 8rem;
-      // flex: 0 0 auto;
 
       .logo {
-        // background-color: yellow;
-        max-height: 6rem;
+        // max-height: 6rem;
         max-width: 8rem;
-        // object-fit: contain;a
-        // align-self: flex-end;
 
         img {
           width: 100%;
