--- a/sass/layout/_navigation.scss
+++ b/sass/layout/_navigation.scss
@@ -5,7 +5,7 @@
   // margin-top: 2rem;
   padding: 1.6rem 0;
   @include padCenter;
-  border-bottom: 1px solid $primary-color;
+  border-bottom: 1px solid $grey-2;
 
   &__logo {
     height: 3rem;
