--- a/sass/base/_typography.scss
+++ b/sass/base/_typography.scss
@@ -115,7 +115,7 @@ body {
 
 .paragraph {
   font-size: 2rem;
-  font-weight: 4400;
+  font-weight: 400;
   line-height: 130%;
   text-transform: capitalize;
 
@@ -172,9 +172,10 @@ body {
 }
 
 .heading-tertiary {
-  font-size: 3rem;
+  font-size: 3.2rem;
   font-weight: 500;
   line-height: 130%;
+  margin-bottom: 1.6rem;
 
   @include respond (big-phone) {
     font-size: 2.8rem;
