--- a/sass/layout/_header.scss
+++ b/sass/layout/_header.scss
@@ -1,53 +1,36 @@
 .header {
-
-
   &__main {
-    // background-color: red;
-    // position: relative;
-
-
+    padding: 10rem 0;
 
     &--text-box {
+      position: relative;
       display: flex;
       flex-direction: column;
-      // justify-content: center;
       align-items: center;
-      width: 89.6rem;
-      height: 44.3rem;
+      width: min(100rem, 100%);
       margin: 0 auto;
+      padding: 0 2rem;
 
-      @include respond (phone) {
+      @include respond(phone) {
         width: 100%;
-        // width: 34.2rem;
         display: block;
       }
-
-      z-index: 1;
-      // position: absolute;
-      top: 10rem;
-
-      // left: 0;
-
-      position: relative;
 
       .intro-span {
         display: flex;
         justify-content: center;
         align-items: center;
-        padding: .6rem 1.2rem;
+        padding: 0.6rem 1.2rem;
         background-color: $grey-2;
-        border: .2px solid $grey-1;
-        // gap: 1rem;
+        border: 0.2px solid $grey-1;
         border-radius: 10rem;
         margin-bottom: 1.6rem;
-
-
       }
 
       h1 {
         text-align: center;
 
-        @include respond (big-phone) {
+        @include respond(big-phone) {
           display: block;
         }
       }
@@ -57,47 +40,35 @@
         padding: 0 2rem;
       }
 
-
-
       .backdrop {
-        width: 85rem;
-        height: 59rem;
-        margin: 0 auto;
-        z-index: -99;
+        width: 100%;
+        height: 100%;
+        z-index: -1;
         position: absolute;
-        top: -4.7rem;
-        left: 0;
-
 
         img {
           width: 100%;
+          height: 100%;
+          object-fit: contain;
         }
       }
     }
 
-
-
     .hero-image-box {
-      height: 70rem;
       width: 100vw;
-
-      margin: 20rem 0 10rem;
-
-      @include respond (phone) {
-        // width: 38rem;
-        height: 38rem;
-      }
+      margin: 10rem 0 10rem;
+      @include padCenter;
 
       img {
         width: 100%;
       }
 
-      @include padCenter;
-
-      @include respond (phone) {
-        display: block;
+      @include respond(phone) {
       }
 
+      @include respond(phone) {
+        display: block;
+      }
     }
   }
 
