--- a/sass/pages/_section-1.scss
+++ b/sass/pages/_section-1.scss
@@ -1,38 +1,34 @@
 .section__learn {
-
   margin: 20rem 0;
 
-  @include respond (phone) {
+  @include respond(phone) {
     margin: 10 0;
   }
 
   &--text-box {
-
     padding: 0 27.2rem;
     margin-bottom: 10rem;
 
-    @include respond (big-phone) {
+    @include respond(big-phone) {
       padding: 0 4rem;
       margin-bottom: 6rem;
     }
 
-    @include respond (tab-port) {
+    @include respond(tab-port) {
       padding: 0 9rem;
       margin-bottom: 8rem;
     }
 
-    @include respond (tab-land) {
+    @include respond(tab-land) {
       padding: 0 18rem;
-
     }
 
-
-    @include respond (phone) {
+    @include respond(phone) {
       padding: 0 2.4rem;
       margin-bottom: 4rem;
     }
 
-    @include respond (sm-phone) {
+    @include respond(sm-phone) {
       padding: 0 2rem;
     }
 
@@ -49,79 +45,63 @@
   }
 
   .grid__3--cols {
-    .span {
-      gap: 5rem;
-
-      .composition {
-
-
-        img {
-          max-width: 44rem;
-          max-height: 23rem;
-
-        }
-
-
-      }
-
-      .text-box {
-        margin-top: 29rem;
-        display: block;
-
-      }
-    }
-
     .box {
       display: flex;
       flex-direction: column;
-      justify-content: center;
-      align-items: center;
-
-
-      background-image: url("/asset/img/grid-2.png"
-        );
+      background-image: url('/asset/img/grid-2.png');
       background-repeat: no-repeat;
       background-position: top;
       background-size: contain;
-      z-index: -3;
-
+      height: 50rem;
 
       .composition {
-        max-width: 40rem;
-        width: 100%;
-
-
-
-
         position: relative;
+        flex: 3;
 
         img {
-          width: 100%;
-          z-index: -1;
+          width: calc(100% - 8rem);
+          height: 100%;
+          position: absolute;
+          top: 0;
+          left: 50%;
+          transform: translateX(-50%);
           object-fit: contain;
-          overflow: hidden;
+          display: block;
+        }
 
-
+        &.right {
+          img {
+            left: unset;
+            right: 0;
+            transform: unset;
+          }
         }
 
         .overlay {
           height: 100%;
           width: 100%;
-          grid-column: span 2;
-          // background-color: green;
-          background-image: linear-gradient(to bottom, transparent, rgb(29, 29, 29));
+          background-image: linear-gradient(to bottom, transparent, rgba(#131313, 0.7));
           position: absolute;
           z-index: 2;
           top: 0;
-          border-radius: 1.2rem;
+        }
+      }
+
+      &.span {
+        .composition {
+          img {
+            height: 75%;
+            top: 55%;
+            left: 50%;
+            transform: translate(-50%, -50%);
+          }
         }
       }
 
       .text-box {
-        align-self: flex-start;
-        margin-top: auto;
+        flex: 1;
         padding: 4rem;
-
+        background-color: inherit;
       }
     }
   }
