--- a/sass/main.scss
+++ b/sass/main.scss
@@ -8,4 +8,5 @@
 @import "./layout/grid";
 @import "./layout/header";
 @import "./layout/navigation";
-@import "./pages/section-1"
+@import "./pages/section-1";
+@import "./pages/section-2";
