--- a/sass/base/_utilities.scss
+++ b/sass/base/_utilities.scss
@@ -5,3 +5,65 @@
     padding: 0 2.4;
   }
 }
+
+section {
+
+  margin: 20rem 0 10rem;
+
+  @include respond(tab-port) {
+    margin: 12rem 0;
+  }
+
+  @include respond(big-phone) {
+    margin: 10rem 0;
+  }
+
+  .section__text-box {
+    padding: 0 25rem;
+    margin-bottom: 10rem;
+
+    @include respond(tab-land) {
+      padding: 0 18rem;
+    }
+
+    @include respond(tab-port) {
+      padding: 0 9rem;
+      margin-bottom: 8rem;
+    }
+
+    @include respond(big-phone) {
+      padding: 0 4rem;
+      margin-bottom: 6rem;
+    }
+
+    @include respond(phone) {
+      padding: 0 2.4rem;
+      margin-bottom: 4rem;
+    }
+
+    @include respond(sm-phone) {
+      padding: 0 2rem;
+    }
+
+    h2 {
+      text-align: center;
+      padding-bottom: 2.4rem;
+    }
+
+    .description {
+      color: $grey-1;
+      text-align: center;
+      padding: 0 5rem;
+
+      @include respond(phone) {
+        padding: 0 2rem;
+
+      }
+
+      @include respond(sm-phone) {
+        padding: 0 1.5rem;
+      }
+
+    }
+  }
+}
