--- a/sass/layout/_grid.scss
+++ b/sass/layout/_grid.scss
@@ -28,3 +28,9 @@
     grid-column: span 1;
   }
 }
+
+.grid__3--cols-sm {
+  display: grid;
+  grid-template-columns: repeat(3, 1fr);
+  grid-auto-rows: 9rem;
+}
