--- a/sass/pages/_section-2.scss
+++ b/sass/pages/_section-2.scss
@@ -55,5 +55,27 @@
   }
 
 
-  .grid__3--cols {}
+  .grid__3--cols-sm {
+    .box {
+      .grid-text-box {
+
+
+
+        .grid-header {
+          display: flex;
+          // justify-content: center;
+          align-items: center;
+          gap: .8rem;
+          margin-bottom: 1rem;
+
+          span {
+            color: $primary-color;
+          }
+
+        }
+
+
+      }
+    }
+  }
 }
