--- a/sass/base/_typography.scss
+++ b/sass/base/_typography.scss
@@ -54,11 +54,12 @@ body {
   }
 }
 
-.heading-description {
+.heading-description,
+.description {
 
 
   font-size: 2.4rem;
-  font-weight: 400;
+  font-weight: 500;
   line-height: 130%;
   letter-spacing: 0em;
   text-align: center;
@@ -195,4 +196,25 @@ body {
   font-size: 1.6rem;
   color: $text-color-1;
   font-weight: 400;
+}
+
+.small-text-sm {
+  font-size: 1.4rem;
+  color: $text-color-1;
+  font-weight: 400;
+
+  @include respond (big-desktop) {
+
+    font-size: 1.8rem;
+  }
+
+  @include respond (tab-port) {
+
+    font-size: 2rem;
+  }
+
+  @include respond (big-phone) {
+
+    font-size: 1.6rem;
+  }
 }
