--- a/sass/base/_utilities.scss
+++ b/sass/base/_utilities.scss
@@ -51,7 +51,7 @@ section {
     }
 
     .description {
-      color: $grey-1;
+
       text-align: center;
       padding: 0 5rem;
 
@@ -66,4 +66,8 @@ section {
 
     }
   }
+}
+
+.header-description {
+  color: $grey-1;
 }
