--- a/sass/layout/_grid.scss
+++ b/sass/layout/_grid.scss
@@ -32,5 +32,16 @@
 .grid__3--cols-sm {
   display: grid;
   grid-template-columns: repeat(3, 1fr);
-  grid-auto-rows: 9rem;
+
+  gap: 2.4rem;
+
+  @include respond(tab-port) {
+    grid-template-columns: repeat(2, 1fr);
+    gap: 3.2rem;
+  }
+
+  @include respond(big-phone) {
+    grid-template-columns: repeat(1, 1fr);
+
+  }
 }
