--- a/sass/pages/_section-2.scss
+++ b/sass/pages/_section-2.scss
@@ -78,4 +78,11 @@
       }
     }
   }
+
+  .green-box {
+    background-color: $accent-green;
+    margin-top: 13rem;
+    padding: 13.2rem 7.2rem;
+
+  }
 }
