--- a/sass/layout/_header.scss
+++ b/sass/layout/_header.scss
@@ -31,7 +31,11 @@
         background-color: $grey-2;
         border: 0.2px solid $grey-1;
         border-radius: 10rem;
-        margin-bottom: 1.6rem;
+        margin-bottom: 3.2rem;
+
+        @include respond (phone) {
+          margin-top: 2.4rem;
+        }
       }
 
       h1 {
@@ -43,181 +47,184 @@
         text-align: center;
         padding: 0 2rem;
 
-        @include respond (sm-phone) {
-          padding: 0 1rem;
+        @include respond (phone) {
+          margin-top: 2.4rem;
         }
-      }
-
-      .backdrop {
-        width: 100%;
-        height: 100%;
-        z-index: -1;
-        position: absolute;
-
-        img {
-          width: 100%;
-          height: 100%;
-          object-fit: contain;
-        }
-      }
-    }
-
-    .hero-image-box {
-      width: 100vw;
-      margin: 10rem 0;
-      @include padCenter;
-
-      @include respond (tab-port) {
-        margin: 8rem 0;
-      }
-
-      @include respond (big-phone) {
-        margin: 5rem 0;
-      }
-
-      @include respond (phone) {
-        margin: 3rem 0;
       }
 
       @include respond (sm-phone) {
-        margin: 4rem 0 0;
+        padding: 0 2rem;
       }
+
+      a {
+        margin-top: 3.2rem;
+
+        @include respond (phone) {
+          margin-top: 2.4rem;
+        }
+
+      }
+    }
+
+    .backdrop {
+      width: 100%;
+      height: 100%;
+      z-index: -1;
+      position: absolute;
 
       img {
         width: 100%;
-        display: block;
-        border-radius: 1rem;
-
-      }
-
-      @include respond (tab-port) {
-        height: 50vh;
+        height: 100%;
         object-fit: contain;
-        object-position: center;
-
-        img {
-          height: 100%;
-          width: 100%;
-
-          object-fit: cover;
-          object-position: center;
-        }
       }
-
     }
   }
 
-  .featured {
-    margin: 0 28rem;
+  .hero-image-box {
+    width: 100vw;
+    margin: 10rem 0;
+    @include padCenter;
+
+    @include respond (tab-port) {
+      margin: 8rem 0;
+    }
 
 
-
-
-    @include respond (tab-land) {
-      margin: 0 20rem;
+    img {
+      width: 100%;
+      display: block;
+      border-radius: 1rem;
 
     }
 
     @include respond (tab-port) {
-      margin: 0 10rem;
+      height: 50vh;
+      object-fit: contain;
+      object-position: center;
 
+      img {
+        height: 100%;
+        width: 100%;
+
+        object-fit: cover;
+        object-position: center;
+      }
+    }
+
+  }
+}
+
+.featured {
+  margin: 0 28rem;
+
+
+
+
+  @include respond (tab-land) {
+    margin: 0 20rem;
+
+  }
+
+  @include respond (tab-port) {
+    margin: 0 10rem;
+
+  }
+
+  @include respond (big-phone) {
+    margin: 0 3rem;
+
+
+
+  }
+
+
+  p {
+    text-align: center;
+    margin-bottom: 4.8rem;
+    color: $text-color-1;
+
+
+    @include respond (tab-port) {
+      margin-bottom: 3.6rem;
     }
 
     @include respond (big-phone) {
-      margin: 0 3rem;
+      margin-bottom: 3rem;
+    }
+
+    @include respond (phone) {
+      margin-bottom: 2rem;
+    }
+  }
+
+
+  .logos {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
 
 
 
+
+    @include respond (big-phone) {
+      display: none;
+      width: 100vh;
+
+      .responsive {
+        display: block;
+      }
     }
 
 
-    p {
-      text-align: center;
-      margin-bottom: 4.8rem;
-      color: $text-color-1;
 
+    .logo {
+      width: 80px;
 
-      @include respond (tab-port) {
-        margin-bottom: 3.6rem;
-      }
-
-      @include respond (big-phone) {
-        margin-bottom: 3rem;
-      }
-
-      @include respond (phone) {
-        margin-bottom: 2rem;
+      img {
+        width: 100%;
       }
     }
 
-
-    .logos {
-      display: flex;
-      justify-content: space-between;
-      align-items: center;
+    .bg-logo {
+      width: 120px;
 
 
-
-
-      @include respond (big-phone) {
-        display: none;
-        width: 100vh;
-
-        .responsive {
-          display: block;
-        }
+      img {
+        width: 100%;
       }
+    }
+  }
 
+  .responsive {
+    display: grid;
+    grid-template-columns: 1fr 1fr 1fr 1fr 1fr;
+    align-items: center;
+    justify-content: center;
+    gap: 8rem;
 
+    .logo {
+      width: 80px;
 
-      .logo {
-        width: 80px;
-
-        img {
-          width: 100%;
-        }
-      }
-
-      .bg-logo {
-        width: 120px;
-
-
-        img {
-          width: 100%;
-        }
+      img {
+        width: 100%;
       }
     }
 
-    .responsive {
-      display: grid;
-      grid-template-columns: 1fr 1fr 1fr 1fr 1fr;
-      align-items: center;
-      justify-content: center;
-      gap: 8rem;
+    .bg-logo {
+      width: 120px;
 
-      .logo {
-        width: 80px;
-
-        img {
-          width: 100%;
-        }
+      @include respond(big-phone) {
+        gap: 5rem;
       }
 
-      .bg-logo {
-        width: 120px;
 
-        @include respond(big-phone) {
-          gap: 5rem;
-        }
-
-
-        img {
-          width: 100%;
-        }
+      img {
+        width: 100%;
       }
     }
   }
 }
+
 
 marquee {
 
