--- a/sass/pages/_section-2.scss
+++ b/sass/pages/_section-2.scss
@@ -8,6 +8,32 @@
       width: 100%;
     }
 
+    @include respond (tab-port) {
+      height: 50rem;
+
+      img {
+        height: 100%;
+      }
+    }
+
+    @include respond (big-phone) {
+
+
+      height: 40rem;
+
+      img {
+        height: 100%;
+      }
+    }
+
+    @include respond (phone) {
+      height: 38rem;
+
+      img {
+        height: 100%;
+      }
+    }
+
 
 
     &::after {
@@ -83,6 +109,22 @@
     background-color: $accent-green;
     margin-top: 13rem;
     padding: 13.2rem 7.2rem;
+
+
+    @include respond (tab-port) {
+      padding: 5rem 3.6rem;
+      margin-top: 10rem;
+    }
+
+    @include respond (big-phone) {
+      padding: 4rem 2.4rem;
+      margin-top: 10rem;
+    }
+
+    @include respond (phone) {
+      padding: 3.2rem 2.4rem;
+      margin-top: 9.6rem;
+    }
 
   }
 }
