--- a/sass/base/_base.scss
+++ b/sass/base/_base.scss
@@ -14,7 +14,7 @@ body {
   scroll-behavior: smooth;
   box-sizing: border-box;
   width: 100vw;
-  overflow-x: hidden;
+  overflow-x: hidden !important;
 
 }
 
