--- a/sass/base/_typography.scss
+++ b/sass/base/_typography.scss
@@ -253,3 +253,54 @@ body {
   }
 
 }
+
+
+
+.bg-no {
+  font-size: 8rem;
+  font-weight: 600;
+  line-height: 130%;
+
+  @include respond (big-desktop) {
+    font-size: 8.4rem;
+  }
+
+  @include respond (tab-land) {
+    font-size: 7.4rem;
+  }
+
+  @include respond (tab-port) {
+    font-size: 5rem;
+  }
+
+  @include respond (big-phone) {
+    font-size: 3rem;
+  }
+
+  @include respond (phone) {
+    font-size: 2rem;
+  }
+
+  color: $text-color-1;
+}
+
+.small {
+  font-size: 1.6rem;
+  font-weight: 500;
+  line-height: 130%;
+  padding-top: 1.6rem;
+  text-transform: uppercase;
+  color: $text-color-1;
+
+  @include respond (tab-port) {
+    font-size: 1.6rem;
+  }
+
+  @include respond (big-phone) {
+    font-size: 1.4rem;
+  }
+
+  @include respond (phone) {
+    font-size: 1.2rem;
+  }
+}
