--- a/sass/main.scss
+++ b/sass/main.scss
@@ -11,3 +11,5 @@
 @import "./pages/section-1";
 @import "./pages/section-2";
 @import "./pages/section-3";
+@import "./pages/section-4";
+@import "./pages/section-testimonial";
