FAQ section completed

--- a/sass/abstract/_variables.scss
+++ b/sass/abstract/_variables.scss
@@ -12,3 +12,4 @@ $gradient: linear-gradient(to bottom,
 $color-black: #070606;
 $accent-green: #48D64C;
 $text-color-gray-green: #292929;
+$border-color: #3D3D3D;
