--- a/sass/main.scss
+++ b/sass/main.scss
@@ -12,4 +12,5 @@
 @import "./pages/section-2";
 @import "./pages/section-3";
 @import "./pages/section-4";
+@import "./pages/section-FAQ";
 @import "./pages/section-testimonial";
