--- a/sass/base/_typography.scss
+++ b/sass/base/_typography.scss
@@ -81,8 +81,8 @@ body {
 
   }
 
-  @include respond(big-phone) {
-    font-size: 1.4em;
+  @include respond(sm-phone) {
+    font-size: 1.4rem;
   }
 
 }
@@ -303,4 +303,25 @@ body {
   @include respond (phone) {
     font-size: 1.2rem;
   }
+}
+.sm-text{
+  font-size: 1.4rem;
+  font-weight: 400;
+  line-height: 130%;
+  padding-top: .8rem;
+  text-transform: uppercase;
+}
+
+.para{
+  font-size: 2.4rem;
+  font-weight: 400;
+  line-height: 130%;
+  letter-spacing: 0em;
+ 
+
+
+  @include respond(big-desktop) {
+    font-size: 2.8rem;
+  }
+
 }
