--- a/sass/pages/_section-testimonial.scss
+++ b/sass/pages/_section-testimonial.scss
@@ -4,31 +4,85 @@
   background-color: $accent-green;
 
   color: $color-black;
-
+  display: flex;justify-content: center;align-items: center;
+flex-direction: column;
   .section__text-box {
+
     h2 {
       padding: 0;
+      margin: 0 auto;
     }
   }
 
-  .grid__3--cols-sm {
+  .grid__3--cols-bg {
     // margin-top: 10rem;
+
+    display: grid;
+    grid-template-columns: repeat(3, 1fr);
+    // grid-auto-rows: 40rem;
+    gap: 2.4rem;
+  
+  
+    @include respond(big-phone) {
+  grid-template-columns: repeat( 3, 100%);
+  overflow: scroll !important;
+
+    }
 
 
 
     .box {
+      display: flex;
+      border-left: 2px solid $color-black ;
 
       .grid-text-box {
-        padding: 2.4rem 3rem;
-        border-left: 2px solid $color-black ;
 
-        p {
+
+        padding: 2.4rem 3rem;
+
+        .para{
+          flex: 1; 
           color: $text-color-gray-green;
           text-align: left;
           margin: 0;
 
         }
       }
+
+      .testimonials__profile {
+        display: flex;
+        flex-direction: colunm;
+        justify-content: space-between;
+        align-items: center;
+        // gap: 5rem;
+        margin: 2.4rem 0 auto  0;
+
+p{
+  flex: 1; 
+  color: $text-color-gray-green;
+  text-align: left;
+  margin: 0;
+
+}
+        figure{
+          height: 8rem;
+          width: 8rem;
+          img{
+        
+            border-radius: 50%;
+            width: 100%;
+          }
+        }
+      }
     }
+  }
+
+  .button{
+    margin-top: 10rem;
+    justify-self: flex-end;
+    align-self: flex-end;
+    display: flex;justify-content: center;align-items: center;
+    gap: 3.2rem;
+ 
   }
 }
