--- a/sass/layout/_footer.scss
+++ b/sass/layout/_footer.scss
@@ -1,4 +1,158 @@
-.footer{
-  margin-top: 16rem;
-  
+.footer {
+  margin: 16rem 0 5.6rem;
+
+  &__logo {
+    padding-bottom: 6rem;
+    border-bottom: 1px solid $border-color;
+
+    &--img {
+      width: 36.4rem;
+
+      @include respond (big-phone) {
+        width: 21.1rem;
+      }
+
+      img {
+        width: 100%;
+      }
+    }
+  }
+
+  &__main {
+    margin: 6rem 0 5.2rem;
+
+    &--content {
+      display: flex;
+      align-items: center;
+      justify-content: space-between;
+
+      @include respond (tab-port) {
+        flex-direction: column;
+        justify-content: center;
+        align-items: flex-start;
+        gap: 6rem;
+
+      }
+
+      @include respond (big-phone) {
+        flex-direction: column;
+        gap: 4.8rem;
+      }
+
+      .qr-code {
+        display: flex;
+        justify-content: flex-start;
+        align-items: center;
+        padding: 2rem 1.6rem;
+        border-radius: .8rem;
+        border: 1px dashed $primary-color;
+        flex: .7;
+
+        gap: 1.2rem;
+
+        @include respond (tab-port) {
+          justify-content: center;
+          flex: 1;
+        }
+
+
+        .composition {
+          width: 10rem;
+        }
+
+        img {
+          width: 100%;
+        }
+
+        .text-box {
+          display: flex;
+          flex-direction: column;
+          justify-content: center;
+          align-items: flex-start;
+
+
+          p {
+            text-align: left;
+            color: $primary-color;
+            font-weight: 400;
+          }
+
+          &__logos {
+            display: flex;
+            align-items: center;
+            gap: 1.2rem;
+
+            &--logo {
+              width: 2.4rem;
+              margin-top: 1.6rem;
+
+              img {
+                width: 100%;
+              }
+            }
+          }
+        }
+
+      }
+    }
+
+    &--info {
+      display: grid;
+      grid-template-columns: repeat(3, 1fr);
+      gap: 5.2rem;
+      flex: 1.3;
+      margin-left: 13.5rem;
+      width: 100%;
+
+      @include respond (tab-port) {
+
+        margin-left: 0;
+      }
+
+      @include respond (big-phone) {
+
+        grid-template-columns: repeat(2, 1fr);
+        justify-content: flex-start;
+        margin: 0;
+        flex: 0;
+        gap: 4.8rem;
+      }
+
+
+      .box {
+        p {
+          margin-bottom: 1.2rem;
+          font-weight: 400;
+          text-align: left;
+        }
+
+        &--header {
+          margin-bottom: 1.6rem;
+          font-weight: 500;
+        }
+
+      }
+    }
+  }
+
+  &__footer {
+    display: flex;
+    align-items: center;
+
+    justify-content: space-between;
+
+    .country {
+      display: flex;
+      justify-content: center;
+      align-items: center;
+
+      p {
+        display: inline;
+      }
+
+      svg {
+        margin-left: 1.8rem;
+      }
+    }
+  }
 }
