--- a/sass/pages/_section-testimonial.scss
+++ b/sass/pages/_section-testimonial.scss
@@ -4,8 +4,11 @@
   background-color: $accent-green;
 
   color: $color-black;
-  display: flex;justify-content: center;align-items: center;
-flex-direction: column;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+
   .section__text-box {
 
     h2 {
@@ -21,11 +24,13 @@ flex-direction: column;
     grid-template-columns: repeat(3, 1fr);
     // grid-auto-rows: 40rem;
     gap: 2.4rem;
-  
-  
+
+
     @include respond(big-phone) {
-  grid-template-columns: repeat( 3, 100%);
-  overflow: scroll !important;
+      grid-template-columns: repeat(3, 100%);
+
+      overflow: hidden;
+      scroll-behavior: smooth;
 
     }
 
@@ -35,16 +40,26 @@ flex-direction: column;
       display: flex;
       border-left: 2px solid $color-black ;
 
+
+      @include respond (big-phone) {
+        border: none;
+      }
+
       .grid-text-box {
 
 
         padding: 2.4rem 3rem;
 
-        .para{
-          flex: 1; 
+        @include respond (big-phone) {
+          padding: 0;
+        }
+
+        .para {
+          flex: 1;
           color: $text-color-gray-green;
           text-align: left;
           margin: 0;
+
 
         }
       }
@@ -55,20 +70,22 @@ flex-direction: column;
         justify-content: space-between;
         align-items: center;
         // gap: 5rem;
-        margin: 2.4rem 0 auto  0;
+        margin: 2.4rem 0 auto 0;
 
-p{
-  flex: 1; 
-  color: $text-color-gray-green;
-  text-align: left;
-  margin: 0;
+        p {
+          flex: 1;
+          color: $text-color-gray-green;
+          text-align: left;
+          margin: 0;
 
-}
-        figure{
+        }
+
+        figure {
           height: 8rem;
           width: 8rem;
-          img{
-        
+
+          img {
+
             border-radius: 50%;
             width: 100%;
           }
@@ -77,12 +94,14 @@ p{
     }
   }
 
-  .button{
+  .button {
     margin-top: 10rem;
     justify-self: flex-end;
     align-self: flex-end;
-    display: flex;justify-content: center;align-items: center;
+    display: flex;
+    justify-content: center;
+    align-items: center;
     gap: 3.2rem;
- 
+
   }
 }
