--- a/sass/pages/_section-testimonial.scss
+++ b/sass/pages/_section-testimonial.scss
@@ -8,6 +8,10 @@
   justify-content: center;
   align-items: center;
   flex-direction: column;
+  overflow-x: hidden !important;
+
+
+
 
   .section__text-box {
 
