--- a/sass/abstract/_variables.scss
+++ b/sass/abstract/_variables.scss
@@ -6,10 +6,11 @@ $text-color-1: #bdbdbd;
 $grey-dark-1: #131313;
 $trans-white: rgba(255, 255, 255, 0.4);
 $gradient: linear-gradient(to bottom,
-        rgba(255, 255, 255, 0),
-        rgba(255, 255, 255, 0.242));
+                rgba(255, 255, 255, 0),
+                rgba(255, 255, 255, 0.242));
 
 $color-black: #070606;
 $accent-green: #48D64C;
 $text-color-gray-green: #292929;
 $border-color: #3D3D3D;
+$green: #12f51a;
