--- a/sass/components/_btn.scss
+++ b/sass/components/_btn.scss
@@ -4,20 +4,28 @@
   text-transform: capitalize;
   cursor: pointer;
 
-}
-
-.btn-1:link,
-.btn-1:visited {
-  letter-spacing: 0;
-
 
 }
 
-.btn-1:hover {
-  letter-spacing: 0px;
-  text-shadow: 2px 4px 3px #0af30a;
-
+.btn-1::after {
+  backface-visibility: hidden;
+  border: .5px solid rgba(#fff, 0);
+  bottom: 0;
+  content: "";
+  display: block;
+  margin: 0 auto;
+  position: relative;
+  transition: all 200ms ease-in-out;
+  margin-top: .5rem;
+  width: 0;
 }
+
+.btn-1:hover::after {
+  border-color: $green;
+  transition: width 300ms ease-in-out;
+  width: 100%;
+}
+
 
 
 //     content: "";
@@ -38,6 +46,8 @@
   transition: all 500ms cubic-bezier(0.19, 1, 0.22, 1);
   border-radius: 4rem;
   padding: .8rem 1.2rem;
+  background-position: 100%;
+  box-sizing: 400%;
 }
 
 .btn-green:hover {
@@ -49,6 +59,7 @@
   text-shadow: 1px 1px 2px #0af30a;
   border-radius: 4rem;
   background-color: transparent;
+  background-position: 5%;
 
 
 }
@@ -64,24 +75,28 @@
 }
 
 .arrow:link,
-.arrow:visited{
+.arrow:visited {
   position: relative;
-  display: flex;justify-content: center;align-items: center;
+  display: flex;
+  justify-content: center;
+  align-items: center;
   padding: 4rem;
   border-radius: 50%;
   transform: scale(1);
-  border: 1px solid  $text-color-gray-green;
+  border: 1px solid $text-color-gray-green;
   background-color: $primary-color;
-  img{
-width: 5rem;
+
+  img {
+    width: 5rem;
     @include absCenter;
   }
 }
 
-.arrow:hover{
-transform: scale(1.2);
+.arrow:hover {
+  transform: scale(1.2);
 }
-.arrow:active{
-transform: scale(.9);
-  box-shadow: inset   0 0 2rem 1rem $grey-1;
+
+.arrow:active {
+  transform: scale(.9);
+  box-shadow: inset 0 0 2rem 1rem $grey-1;
 }
