--- a/sass/layout/_navigation.scss
+++ b/sass/layout/_navigation.scss
@@ -1,11 +1,16 @@
 .navigation {
   display: flex;
   justify-content: space-between;
+  height: 7rem;
   position: relative;
   // margin-top: 2rem;
   padding: 1.6rem 0;
   @include padCenter;
   border-bottom: 1px solid $grey-2;
+
+  @include respond (tab-port) {
+    position: unset;
+  }
 
   &__logo {
     height: 3rem;
@@ -20,8 +25,26 @@
     display: block;
 
     @include respond(tab-port) {
-      display: none;
+
+
+      display: flex;
+      flex-direction: column;
+      justify-content: center;
+      align-items: center;
+      height: 60rem;
+      width: 50%;
+      border-radius: 50rem;
+      position: fixed !important;
+      left: 50%;
+      z-index: 2;
+      top: -100rem;
+      box-shadow: inset 0 0 3rem rgba(0, 255, 0, 0.8);
+      background-color: $color-black;
+      // backdrop-filter: blur(5px);
+      transition: all 500ms ease 500ms;
+
     }
+
 
 
 
@@ -36,24 +59,148 @@
       a {
         padding: .8rem 4rem;
 
+
+        @include respond(tab-port) {
+          padding: 0;
+          font-size: 3rem;
+          z-index: 5;
+        }
       }
 
 
+
+      @include respond(tab-port) {
+        position: unset;
+        padding: 0;
+        flex-direction: column;
+      }
     }
 
     &--actions {
       display: inline-flex;
+      justify-content: center;
+      align-items: flex-start;
 
       a {
         padding: .8rem 1rem;
+
 
         :last-child {
           padding: .8rem 0;
 
         }
 
+        @include respond(tab-port) {
+          padding: 0;
+          font-size: 3rem;
+        }
+      }
+
+      @include respond(tab-port) {
+        padding: 0;
+        // display: unset;
+        flex-direction: column;
       }
     }
 
+
   }
+
+
+
+  &__input {
+    display: none;
+  }
+
+  &__input:checked~&__nav {
+    @include absCenter;
+
+  }
+
+  &__input:checked+&__button {
+    @include absCenter;
+    z-index: 5;
+    top: 10rem;
+    background-color: rgba(0, 255, 0, 3);
+    border-radius: 50%;
+    padding: 1rem;
+    height: 7rem;
+    width: 7rem;
+
+
+
+    .navigation__button--icon {
+      background-color: transparent;
+      height: 0;
+      // top: -1rem;
+
+
+      &::before {
+        transform: rotate(135deg);
+        top: 0;
+      }
+
+      &::after {
+        transform: rotate(-135deg);
+        top: 0;
+      }
+    }
+  }
+
+
+
+  &__button {
+    height: 5rem;
+    width: 5rem;
+    justify-content: center;
+    align-items: center;
+    transition: 0.05s ease;
+    transition-property: background-color, height;
+    display: none;
+    position: relative;
+    z-index: 1;
+
+    @include respond(tab-land) {
+      display: flex;
+    }
+
+    &--icon {
+      position: relative;
+      display: block;
+      height: 3px;
+      width: 100%;
+      background-color: $primary-color;
+      transition: all 0.3s;
+      border-radius: .8rem;
+
+
+      &::before,
+      &::after {
+        content: '';
+        position: absolute;
+        display: block;
+        height: 3px;
+        width: 100%;
+        background-color: $primary-color;
+        transition: transform 0.3s;
+        border-radius: .8rem;
+      }
+
+      &::before {
+        top: -1rem;
+      }
+
+      &::after {
+        top: 1rem;
+      }
+    }
+  }
+}
+
+.backdrop-nav {
+  height: calc(100vh + 10vh);
+  width: 100%;
+  background-image: linear-gradient(to bottom right, $accent-green, $trans-white);
+  z-index: 9;
+
 }
