--- a/sass/pages/_section-FAQ.scss
+++ b/sass/pages/_section-FAQ.scss
@@ -1,31 +1,36 @@
-.section-FAQ{
+.section-FAQ {
   margin-top: 10rem;
-  .section__text-box{
+
+  .section__text-box {
 
     display: flex;
     // align-items: center;
-padding: 0 ;
+    padding: 0;
     // width: min(100rem, 100%);
-    overflow-x: hidden;
-   
+    overflow-x: hidden !important;
 
-   h2{
- text-align: left;
-   }
+
+    h2 {
+      text-align: left;
+    }
   }
 
-  .FAQ{
+  .FAQ {
     margin-top: 10rem;
     display: flex;
     flex-direction: column;
     gap: 2.4rem;
-    &__box{
-      display: flex;align-items: start;
+
+    &__box {
+      display: flex;
+      align-items: start;
       justify-content: space-between;
-      p{
+
+      p {
         text-align: left;
         margin: 0;
       }
+
       padding-bottom: 4rem;
       border-bottom: 1px solid $border-color;
     }
